--- a/PeopleProTraining/PeoplePro/Views/Departments/Index.cshtml
+++ b/PeopleProTraining/PeoplePro/Views/Departments/Index.cshtml
@@ -1,31 +1,29 @@
-﻿@model IEnumerable<PeoplePro.Dal.Models.Department>
-
+﻿@model PeoplePro.Models.DepartmentsViewModel
 @{
     ViewData["Title"] = "Index";
 }
 
 <h2>Index</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<button class="btn btn-primary" type="button" onclick="createDepartment()">Create New</button>
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.Departments[0].Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Building)
+                @Html.DisplayNameFor(model => model.Departments[0].Building)
             </th>
-            <th>@Html.DisplayNameFor(model => model.Employees)</th>
+            <th>@Html.DisplayNameFor(model => model.Departments[0].Employees)</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.Departments) {
         <tr>
-         `   <td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
@@ -36,7 +34,7 @@
                 <span>@Html.DisplayFor(modelEmployee => employee.FirstName)</span>
                 <span>@Html.DisplayFor(modelEmployee => employee.LastName)</span>
                 <span>|</span>
-    }
+}
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
@@ -47,3 +45,34 @@
 }
     </tbody>
 </table>
+
+<div id="departmentModal" class="modal fade" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title">Create a Department</h3>
+            </div>
+
+            <form id="departmentForm" class="modal-body needs-validation" novalidate>
+                <div class="form-group">
+                    <label>Name</label>
+                    <input class="form-control" name="Name" value="" type="text" minlength="3" maxlength="60" placeholder="Name" required autofocus>
+                </div>
+                <div class="form-group">
+                    <label>Building</label>
+                    <select class="form-control" name="BuildingId" required>
+                        <option value="">Select a building</option>
+@foreach (var building in Model.Buildings) {
+                        <option value="@building.Id">@building.Name</option>
+}
+                    </select>
+                </div>
+            </form>
+
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                <button id="departmentModalAcceptBtn" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
